src/test/deca/syntax/invalid/lexer/include_tests/include_not_found.deca
// Description:
//    le package est introuvable
//
// Resultats:
//    Ligne 11 : Erreur lexicale
//
// Historique:
//    cree le 09/01/2023
//

#include "file_not_existing"